--- a/html/about.html
+++ b/html/about.html
@@ -66,12 +66,12 @@
 			<div class="col-lg-offset-1 col-lg-10 col-xs-offset-0 col-xm-12">
 				<div class="row">
 					<div class="col-xs-12 uc_text">
-						<h3>Our Company and President</h3> <hr />
+						<div class="h3">Our Company and President</div> <hr />
 						<p>Our President and founder Mitch Pagerey was born in Pittsfield Massachusetts and relocated to South Florida in 1989. He began his electrical career as a piece worker on various types of electrical installations. In April of 1999, Mitch had achieved his State Master Electrical Contractors status and started up a small company Unlimited Electrical Contractors Corporation. He began by doing residential and commercial projects as well as any service work available.</p>
 						<p>In May of 2001 Mitch staying focused on his business plan procured a new 10,000 foot square facility to house the Unlimited Companies Operation. Mitch continues to be hands on involved with the day-to-day operation with his eyes on the future.</p>
 					</div>
 					<div class="col-xs-12 uc_text">
-						<h3>About</h3> <hr />
+						<div class="h3">About</div> <hr />
 						<p>Unlimited Companies is composed of three dynamic South Florida businesses. They are Unlimited Electrical Contractors, Unlimited Custom Pools and Spa’s and Unlimited Electronic Environments. These three corporations were brought together under one umbrella by the owner, Mitchell R. Pagerey. </p>
 						<ul>
 							<li>Unlimited Electrical Contractors engages in commercial building and residential projects and provides prompt electric repair and trouble shooting services for large and small customers. </li>
@@ -80,11 +80,11 @@
 						</ul>
 					</div>
 					<div id="mission" class="col-xs-12 uc_text">
-						<h3>Our Mission</h3> <hr />
+						<div class="h3">Our Mission</div> <hr />
 						<p>Create products at the highest of standards<br>through means that utilize the latest technologies, top skilled labor, and above all, our work ethic;<br>“Whatever it takes”</p>
 					</div>
 					<div class="col-xs-12 uc_text">
-						<h3>Career Oportunities</h3> <hr />
+						<div class="h3">Career Oportunities</div> <hr />
 						<p><strong>Immediate Opening:</strong> Unlimited Electrical Contractors, Corp., located in Pompano Beach, Florida seeks full time Project Engineer with Master Degree and 3 yr. exp. Plan, design, and oversee electrical construction projects. </p>
 						<p>Fax your resume to 954-481-8249 or e-mail it to jobs@unlimitedcompanies.com; </p>
 						<p><strong>Attn: Tony Sprovieri, Controller</strong></p>
