--- a/v1.2/index.html
+++ b/v1.2/index.html
@@ -16,15 +16,14 @@
 
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
-			<div class="navbar-header">
+			<div class="navbar-header logos">
 				<button type="button" class="navbar-toggle glyphicon glyphicon-menu-hamburger" data-toggle="collapse" data-target="#collapsemenu">
 				</button>
-				<a href="#" class="navbar-brand">
-					<img src="images/logos/UC_3logo.png" />
-				</a>
+				<a href="index.html" class="logos hidden-lg hidden-md hidden-sm visible-xs"><img class="col-xs-10" src="images/logos/UC_3logo.png" /></a>
 			</div> <!-- navbar header -->
-			<div id="collapsemenu col-lg-6 col-md-7 col-xs-12" class="collapse navbar-collapse">
+			<div id="collapsemenu" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
+					<li class="col-lg-6 col-md-5 col-sm-4 logos"><a href="index.html"><img src="images/logos/UC_3logo.png" /></a></li>
 					<li class="hidden-sm visible-xs visible-md visible-lg"><a href="index.html">Home</a></li>
 					<li><a href="html/about.html">About</a></li>
 					<li><a href="html/services.html">Services</a></li>
